# g2o

./: .gitignore  CMakeLists.txt  package.xml
g2o/core/: base_fixed_sized_edge.hpp  base_variable_sized_edge.hpp
